--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <button type="button">Order Service</button>
             </section>
             <section>
+                <h2>Peculiarities</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -49,6 +50,8 @@
                         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
+            </section>
+            <section>
                 <h2>What are we doing</h2>
                 <ul>
                     <li><img src="./images/Rectangle-71-1.jpg" alt="computer" width="360" /></li>
